--- a/thankyou.html
+++ b/thankyou.html
@@ -50,7 +50,7 @@
   <div class="card">
     <h1>Thank You!</h1>
     <p>Your message has been sent successfully. We’ll be in touch soon with blooming ideas for your special event.</p>
-    <a href="petalessence.html">Return to Home</a>
+    <a href="index.html">Return to Home</a>
   </div>
 </body>
 </html>
