--- a/index.html
+++ b/index.html
@@ -249,7 +249,7 @@
       <div style="text-align: center;">
         <button type="submit" style="background-color: #d6336c; color: white; padding: 0.4rem 1.2rem; border: none; border-radius: 6px; font-weight: 600; font-size: 0.9rem; cursor: pointer; display: inline-block;">Submit</button>
       </div>
-      <input type="hidden" name="_next" value="https://petalessence.com/thankyou.html">
+      <input type="hidden" name="_next" value="https://gandhamvimala.github.io/Petelessence/thankyou.html">
       <input type="hidden" name="_captcha" value="false">
       <input type="hidden" name="_autoresponse" value="Thank you for contacting Petal Essence! We’ll get back to you shortly with blooming ideas for your event." />
     </form>
